tests/generics/generic_vec_test.diag
generic_vec_test.ax:26:17: error: type mismatch: expected 24, found 3
generic_vec_test.ax:27:17: error: type mismatch: expected 24, found 3
generic_vec_test.ax:28:17: error: type mismatch: expected 24, found 3
generic_vec_test.ax:35:15: error: type mismatch: cannot compare 32 and 33
